# soundtoys

./: .gitignore  README.md
soundtoys-android/app/: CMakeLists.txt  build.gradle
soundtoys-android/app/src/androidTest/java/com/bartholomule/soundtoys/: ExampleInstrumentedTest.java
soundtoys-android/app/src/main/: AndroidManifest.xml
soundtoys-android/app/src/main/cpp/: native-lib.cpp
soundtoys-android/app/src/main/java/com/bartholomule/soundtoys/: MainActivity.java
soundtoys-android/app/src/main/res/layout/: activity_main.xml
soundtoys-android/app/src/main/res/values/: strings.xml
soundtoys-android/app/src/test/java/com/bartholomule/soundtoys/: ExampleUnitTest.java
soundtoys-android/gradle/wrapper/: gradle-wrapper.properties
soundtoys-generic/: AndroidSoundTraits.hpp  CMakeLists.txt  FrequencyGenerator.hpp  SawtoothGenerator.hpp  SineGenerator.hpp  SoundGenerator.cpp  SoundGenerator.hpp  SoundTraitsAndroid.hpp  SoundTraitsWindows.hpp
soundtoys-windows/: CMakeLists.txt
soundtoys-windows/soundtoys-windows/: CMakeLists.txt
soundtoys-windows/soundtoys-windows/src/: dsoundwindow.cpp  dsoundwindow.hpp  main.cpp  memory.hpp  scopeexit.cpp  scopeexit.hpp  simplelock.cpp  simplelock.hpp  soundbuffer.cpp  soundbuffer.hpp  soundhandler.cpp  soundhandler.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
